fixed horizontal scroller layout inspector

--- a/src/styles/block-design-system-blocks.scss
+++ b/src/styles/block-design-system-blocks.scss
@@ -90,7 +90,8 @@
 }
 
 // Columns
-.stk-block-columns {
+.stk-block-columns,
+.stk-block-horizontal-scroller {
 	#{ '--stk-columns-spacing' }: cssvar(column-margin);
 }
 body:not(.wp-admin) .stk-block-column:first-child:last-child > .stk-column-wrapper { // Remove the margins if it's only 1 block.
